# tax-reporting-public

./: .gitignore  .python-version  AGENTS.md  COMMERCIAL_USAGE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-binaries.yml
examples/expected/: aggregated_tax_report_2025.normalized.txt
examples/inputs/: ibkr_activity_statement_sample_sanitized.csv  kraken_report_since_inception_sample_sanitized.csv
report_analyzer/: __init__.py  __main__.py
scripts/: normalize_example_report.py
src/: config.py  logging_config.py  main.py  report_analyzer.py
src/crypto_fx/: cli.py  exchanges.py
src/integrations/: __init__.py
src/integrations/binance/: README.md  __init__.py  futures_pnl_analyzer.py
src/integrations/coinbase/: README.md  __init__.py  constants.py  ledger.py  models.py  output.py  parsing.py  report_analyzer.py
src/integrations/crypto/: __init__.py
src/integrations/fund/: README.md  __init__.py
src/integrations/ibkr/: README.md  __init__.py  activity_statement_analyzer.py  analyzer_definition.py  constants.py  models.py  shared.py
src/integrations/p2p/: README.md  __init__.py
src/integrations/shared/: README.md  __init__.py  aggregation.py  autodetect.py  cli_helpers.py  contracts.py  registry.py  result_builders.py
src/report_analyzer/: __init__.py  __main__.py  cli.py  registry.py
src/services/: __init__.py  pdf_reader.py
src/services/bnb_fx/: __init__.py  cli.py  client.py  models.py  utils.py
src/services/crypto_fx/: __init__.py  cache.py  cli.py  client.py  exchanges.py  models.py
src/tax_reporting/: config.py  main.py
tests/: test_imports.py  test_report_analyzer_cli.py
tests/crypto_fx/: test_crypto_fx_cache.py  test_crypto_fx_client.py  test_crypto_fx_exchanges.py
tests/integrations/binance/: test_futures_pnl_analyzer.py
tests/integrations/coinbase/: support.py  test_coinbase_outputs.py  test_coinbase_parsing_and_validation.py  (+2 more)
tests/scripts/: test_normalize_example_report.py
tests/services/: test_pdf_reader.py
(+181 files in other folders)
